--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "obsidian-dynamic-outline",
+	"name": "Dynamic Outline",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Adds a customizable GitHub-like floating table of contents that does not require the core \"Outline\" plugin.",
+	"author": "theopavlove",
+	"authorUrl": "https://github.com/theopavlove",
 	"isDesktopOnly": false
 }
