Change plugin id

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "obsidian-dynamic-outline",
+	"id": "dynamic-outline",
 	"name": "Dynamic Outline",
 	"version": "1.0.2",
 	"minAppVersion": "0.15.0",
