--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,6 @@
 	"description": "Adds a customizable GitHub-like floating table of contents.",
 	"author": "theopavlove",
 	"authorUrl": "https://github.com/theopavlove",
+	"fundingUrl": "https://www.buymeacoffee.com/theopavlove",
 	"isDesktopOnly": false
 }
